<resources>
    <string name="app_name">TrivTix</string>
    <string name="selogan">Pesan Tiket Jadi Lebih Mudah</string>
    <string name="signin">SIGN IN</string>
    <string name="sigout">SIGN OUT</string>
    <string name="newaccount">NEW ACCOUNT"</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="email_label">Email Address</string>
    <string name="name_label">Name</string>
    <string name="Bio_label">Hobby</string>
    <string name="createnewaccount">CREATE NEW ACCOUNT</string>
    <string name="explore">EXPLORE NOW</string>
    <string name="continue_label">CONTINUE</string>

</resources>
